@@ -6,14 +6,14 @@ class RewriteSharedFormulae
   end
   
   def rewrite(input, shared_targets, output)
-    shared_targets = shared_targets.each_line.map(&:strip).to_a
+    shared_targets = Hash[*shared_targets.each_line.map { |l| l.split("\t").map(&:strip) }.flatten]
     input.each_line do |line|
-      ref, copy_range, formula = line.split("\t")
-      share_formula(ref, formula, copy_range, shared_targets, output)
+      ref, copy_range,  shared_formula_identifier, formula = line.split("\t")
+      share_formula(ref, formula, copy_range, shared_formula_identifier, shared_targets, output)
     end
   end
   
-  def share_formula(ref, formula, copy_range, shared_targets, output)
+  def share_formula(ref, formula, copy_range, shared_formula_identifier, shared_targets, output)
     shared_ast = eval(formula)
     copier = AstCopyFormula.new
     copy_range = Area.for(copy_range)
@@ -30,6 +30,7 @@ class RewriteSharedFormulae
     copy_range.offsets.each do |row,column|
       new_ref = start_reference.offset(row,column)
       next unless shared_targets.include?(new_ref)
+      next unless shared_formula_identifier == shared_targets[new_ref]
       copier.rows_to_move = row + offset_from_formula_to_start_rows
       copier.columns_to_move = column + offset_from_formula_to_start_columns
       ast = copier.copy(shared_ast)
