@@ -1,5 +1,6 @@
 # Head
 
+- Previously where shared formulae overlapped, the last would win. Now the correct one wins.
 - Tests are now output in dependency order, so the first test to fail is likely to be closest to the underlying problem.
 - VLOOKUP and HLOOKUP now accept 1 and 0 in place of TRUE and FALSE on their last argument
 - Inline strings now have newlines stripped to be consistent with shared strings (it would be better if they were stripped in neither)
